objects/Expenses__c.object
<CustomObject>
    <description>Captures expense report records</description>
    <fields>
        <fullName>Contact_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Record</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Year_Date_Index__c</fullName>
        <description>Date index field: Number of days since start of expense date year</description>
        <formula>Expense_Date__c -
DATE(YEAR(Expense_Date__c),1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <label>Expense Amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Approval_Date__c</fullName>
        <label>Expense Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Comments__c</fullName>
        <label>Expense Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Date__c</fullName>
        <label>Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Submission_Date__c</fullName>
        <label>Expense Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_System_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This field captures the current expense system (Concur) ID, which should be unique and used as an external identifier.</inlineHelpText>
        <label>Expense System ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Institution_City__c</fullName>
        <label>Institution City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_Name__c</fullName>
        <label>Institution Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_State__c</fullName>
        <label>Institution State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>NPI Number</label>
        <referenceTo>NPI_Records__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NPI_Record__c</fullName>
        <label>NPI Record</label>
        <referenceTo>NPI_Records__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>NPI_Record</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Physician_Name__c</fullName>
        <formula>NPI_Number__r.First_Name__c  + &quot; &quot; + NPI_Number__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physician Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Email__c</fullName>
        <label>RSD Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Submitted_Days_after_Expense__c</fullName>
        <formula>Expense_Submission_Date__c-Expense_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Days between the date the expense was incurred and the date it was submitted</inlineHelpText>
        <label>Submitted # Days after Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>update</label>
        <type>Checkbox</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>Caldera</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Physician_Name__c</columns>
        <columns>Expense_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Expense_Amount__c</columns>
        <columns>NPI_Record__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Physician_Name__c</field>
            <operation>startsWith</operation>
            <value>Humberto</value>
        </filters>
        <label>Caldera</label>
        <language>en_US</language>
        <sharedTo>
            <role>Senior_Financial_Analyst</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Expenses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>